[#5] Created a dumb page

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,13 @@
 <html>
-    <body>
-        <script src="out/gru.js" type="text/javascript"></script>
-    </body>
+  <head>
+    <title>Gru</title>
+  </head>
+  <body>
+    <header id="panel">
+      <div><img src="img/logo.jpg" width="50" /></div>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
+    </header>
+    <script src="js/gru.js" type="text/javascript"></script>
+  </body>
 </html>
