--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,36 @@
 <html>
   <head>
-    <title>Gru</title>
+    <title>gru</title>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+
+     <link rel="icon" href="img/favicon.ico">
   </head>
   <body>
-    <header id="panel">
-      <div><img src="img/logo.jpg" width="50" /></div>
-      <button id="start">Start</button>
-      <button id="stop">Stop</button>
-    </header>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-fixed-top">
+      <div class="container">
+        <img src="img/logo.png" class="logo" />
+
+
+        <div id="controls">
+          <div class="info">
+            <label id="minion-count">0</label> Minions
+          </div>
+          <div class="info">
+            <label id="reqs-sec">0</label> Reqs/sec
+          </div>
+          <div class="info">
+            <label id="status">[Stopped]</label>
+          </div>
+          <button id="start" class="btn btn-success">Start</button>
+          <button id="stop" class="btn btn-danger">Stop</button>
+        </div>
+      </div>
+    </nav>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/gru.js" type="text/javascript"></script>
   </body>
 </html>
