--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,6 @@
       <div class="container">
         <img src="img/logo.png" class="logo" />
 
-
         <div id="controls">
           <div class="info">
             <label id="minion-count">0</label> Minions
@@ -24,8 +23,7 @@
           <div class="info">
             <label id="status">[Stopped]</label>
           </div>
-          <button id="start" class="btn btn-success">Start</button>
-          <button id="stop" class="btn btn-danger">Stop</button>
+          <div id="start-stop"></div>
         </div>
       </div>
     </nav>
