[#35] Show total values in table footer

--- a/web/index.html
+++ b/web/index.html
@@ -43,22 +43,8 @@
             <td># reqs./sec</td>
           </tr>
         </thead>
-        <tbody id="metrics">
-        </tbody>
-        <tfoot>
-          <tr>
-            <td></td>
-            <td>Total</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </tfoot>
+        <tbody id="metrics"></tbody>
+        <tfoot id="metrics-total"></tfoot>
       </table>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
