--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title" id="start-options-lbl">Start Options</h4>
+            <h4 class="modal-title" id="start-options-lbl">Start Minions</h4>
           </div>
           <div class="modal-body">
              <div class="form-group">
