[#37] Applied CSS style to modal

--- a/web/index.html
+++ b/web/index.html
@@ -66,9 +66,9 @@
                <label for="minion-rate-txt">Rate</label>
                <input type="text" class="form-control" id="minion-rate-txt"/>
              </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" id="go-btn" data-dismiss="modal">Go!</button>
+             <div class="modal-buttons">
+               <button type="button" class="btn btn-success" id="go-btn" data-dismiss="modal">Go!</button>
+             </div>
           </div>
         </div>
       </div>
