[#42] Improved nav layout

--- a/web/index.html
+++ b/web/index.html
@@ -15,13 +15,16 @@
 
         <div id="controls">
           <div class="info">
-            <label id="minion-count">0</label> Minions
+            <div id="minion-count"></div>
+            Minions
           </div>
           <div class="info">
-            <label id="reqs-sec">0</label> Reqs/sec
+            <div id="reqs-sec"></div>
+            Reqs/sec
           </div>
           <div class="info">
-            <label id="status">[Stopped]</label>
+            <div id="status">[Stopped]</div>
+            <div id="clear-btn"></div>
           </div>
           <div id="start-stop"></div>
         </div>
