[#42] Added Clear button

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
           </div>
           <div class="info">
             <div id="status">[Stopped]</div>
-            <div id="clear-btn"></div>
+            <div id="clear"></div>
           </div>
           <div id="start-stop"></div>
         </div>
